--- a/user_interface/src/App.css
+++ b/user_interface/src/App.css
@@ -11,32 +11,32 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #ffffff);
 }
 
-@keyframes logo-spin {
+@keyframes fadeout {
   from {
-    transform: rotate(0deg);
+    opacity: 1;
+    transform: translateX(0);
   }
   to {
-    transform: rotate(360deg);
+    opacity: 0;
+    transform: translateX(100px);
   }
+}
+
+.fadeout {
+  animation: fadeout forwards 1s;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
+  a:nth-of-type(1) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
 
 .card {
   padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
