--- a/Application/src/settings.css
+++ b/Application/src/settings.css
@@ -27,8 +27,8 @@
     display: inline-block;
 }
 
-/* Show dropdown items on hover */
-.dropdown:hover .dropdown-items {
+/* Show dropdown items when open */
+.dropdown.open .dropdown-items {
     display: block;
 }
 
@@ -39,6 +39,8 @@
     z-index: 1;
     min-width: 320px;
     background-color: #4c4c4c;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 /* Paragraphs inside dropdown items */
@@ -49,6 +51,13 @@
     margin: 0;
     cursor: pointer;
     transition: background 0.2s;
+    border-bottom: 1px solid #666;
+}
+
+.dropdown-items p:last-child {
+    border-bottom: none;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .dropdown-items p:hover {
