--- a/Application/src/settings.css
+++ b/Application/src/settings.css
@@ -8,9 +8,10 @@
 .dropdownButton {
     background-color: #b7b7b7;
     min-width: 320px;
+    min-height: 16px;
     border-radius: 5px;
     font-size: 16px;
-    padding: 16px;
+    padding: 10px;
     color: #1b1b1b;
     cursor: pointer;
     border: none;
@@ -68,12 +69,86 @@
 .button {
     background-color: #909090;
     min-width: 80px;
+    min-height: 10px;
     border-radius: 5px;
     font-size: 16px;
-    padding: 16px;
+    padding: 4px;
     color: #000000;
     cursor: pointer;
     border: none;
     transition: background-color 0.5s;
     margin-top: 24px;
 }
+
+/* The screams, they beckon terrible omens */
+
+ /* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #f0b9ff;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+} 
+
+.sliderParagraph {
+    display: inline-block;
+    padding: 16px;
+    font-size: 15px;
+    color: #909090;
+}
+
