--- a/Application/src/settings.css
+++ b/Application/src/settings.css
@@ -11,7 +11,7 @@
     min-height: 16px;
     border-radius: 5px;
     font-size: 16px;
-    padding: 10px;
+    padding: 10px 16px;
     color: #1b1b1b;
     cursor: pointer;
     border: none;
@@ -25,7 +25,7 @@
 /* Dropdown container */
 .dropdown {
     position: relative;
-    display: block;
+    display: inline-block;
     margin-bottom: 0;
 }
 
@@ -39,7 +39,7 @@
     display: none;
     position: absolute;
     z-index: 1;
-    min-width: 320px;
+    min-width: 100%;
     background-color: #4c4c4c;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -49,7 +49,8 @@
 .dropdown-items p {
     font-size: 16px;
     color: #f0f0f0;
-    padding: 12px 16px;
+    min-height: 16px;
+    padding: 10px 16px;
     margin: 0;
     cursor: pointer;
     transition: background 0.2s;
@@ -105,7 +106,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f0b9ff;
+  background-color: #e298f7;
   -webkit-transition: .4s;
   transition: .4s;
 }
