--- a/Application/src/404.css
+++ b/Application/src/404.css
@@ -1,4 +1,4 @@
-.card {
+.notfound-card {
     margin: 0 auto;
     padding: 2em;
     width: min(90vw, 100%);
@@ -16,7 +16,7 @@
     inherits: false;
 }
 
-.card::after, .card::before {
+.notfound-card::after, .notfound-card::before {
     content: '';
     position: absolute;
     height: 100%;
@@ -30,7 +30,7 @@
     border-radius: 10px;
     animation: 3s spin linear infinite
 }
-.card::before {
+.notfound-card::before {
     filter: blur(1.5rem);
     opacity: 0.5;
 }
